--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
   <title>Robinsons Static</title>
 </head>
 <body>
 
     <h1>Robinsons Static</h1>
 
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="js/main-min.js"></script>
 </body>
 </html>
