update: html homepage complete

--- a/index.html
+++ b/index.html
@@ -8,8 +8,183 @@
 </head>
 <body>
 
-    <h1>Robinsons Static</h1>
+    <div id="wrapper">
 
+          <header>
+            <nav id="nav" role="navigation" aria-labelledby="Main Navigation" aria-label="Main Navigation">
+              <ul id="navlist" role="menubar">
+                <li role="menuitem">
+                  <a href="">Team </a>
+                </li>
+                <li role="menuitem">
+                  <a href="">Careers</a>
+                </li>
+                <li role="menuitem">
+                  <a href="">Shop</a>
+                </li>
+                <li role="menuitem">
+                  <a href="">About</a>
+                </li>
+                <li role="menuitem">
+                  <a href="">Newsletter</a>
+                </li>
+                <li role="menuitem">
+                  <a href="index.html" aria-current="page">Robinsons Cannabis</a>
+                </li>
+                <li role="menuitem">
+                  <a href="https://www.instagram.com/robinsonscannabis/" target="_blank">Instagram</a>
+                </li>
+                <li role="menuitem">
+                  <a href="https://twitter.com/robinsonscanna?lang=en" target="_blank">Twitter</a>
+                </li>
+                <li role="menuitem">
+                  <a href="https://www.instagram.com/robinsonscannabis/" target="_blank">Facebook</a>
+                </li>
+              </ul>
+            </nav>
+          </header>
+
+
+          <main id="main" role="main">
+
+                <section id="logo">
+                  <h1>Robinsons</h1>
+                </section>
+
+                <section id="tagline">
+                    <h2>Established M . M . X .V. I . I . I . </h2>
+                    <h3>
+                      Robinsons is Canada’s premier producer of fine crafted cannabis.
+                      Hand-tended and cultivated in the heart of Annapolis Valley, Nova Scotia, a coastal region
+                      rich with agrarian heritage. Enjoyed by discerning consumers everywhere.
+                    </h3>
+                </section>
+
+                <section id="imgs1">
+                  <img src="" alt="">
+                  <div>
+                    <img src="" alt="">
+                    <img src="" alt="">
+                  </div>
+                </section>
+
+                <section id="about">
+                    <h2>Our Story</h2>
+                    <h3>
+                      It begins with a plant: Cannabis sativa /Cannabis indica. This beautiful, complex plant inspired Founder and Master Grower Andrew Robinson to pursue a formal education in Plant Sciences and Technology at Dalhousie University and Nova Scotia Agricultural College, respectively. Both a passionate connoisseur as well as an intrepid visionary, Andrew brings over XX years’ experience to his craft, his namesake product now a measure of both quality and esteem. Upon assembling an expert team of growers, cultivators, XX, and XY, Robinsons Cannabis was established in XXXX. As our operations continue to grow, our focus remains resolute: produce an unparalleled, premium product, one which will both elevate and enhance Canadians’ unique personal cannabis experience.
+                    </h3>
+                </section>
+
+                <section id="products">
+                  <h2>Products</h2>
+                  <div class="product">
+                    <img src="" alt="">
+                    <p>Fire O.G. Kush</p>
+                    <p>
+                      Morbi aliquam ut erat nec congue. Praesent id eleifend tellus. Morbi commodo, metus at facilisis porta, leo arcu gravida lacus, sede aliquam massa nunc nec arcu.
+                    </p>
+                    <small>
+                      70% (Sativa)
+                    </small>
+                    <small>
+                      $30/GRAM
+                    </small>
+                  </div>
+                </section>
+
+                <section id="newsletterSignUp">
+                  <p>Receive updates about news and prodcuts direct to your inbox.</p>
+                  <p>
+                    Subscribe to our Newsletter <a href="">here</a>.
+                  </p>
+                </section>
+
+                <section id="imgAlone">
+                  <img src="" alt="">
+                </section>
+
+                <section id="region">
+                    <h2>The Region</h2>
+                    <h3>
+                      Located at the base of two vast mountain ranges adjacent to the Atlantic Ocean, the sun-kissed Annapolis Valley experiences a mild
+                      micro-climate, producing consistent temperatures and evenly-
+                      distributed rainfall patterns throughout the year. Its rich, nutrient-
+                      dense soil is comprised of pure eroded glacial runoff, creating
+                      fertile land ideal for precise crop production and distinctive ter-
+                      roir. First colonized by Acadian settlers in the early 1600s, this
+                      lush, coastal region is widely considered one of the most abundant agricultural areas within Atlantic Canada, as well as one of
+                      the country’s most robust wine-producing regions. We’re proud
+                      to call it home.
+                    </h3>
+                </section>
+
+                <section id="imgs2">
+                  <img src="" alt="">
+                  <div>
+                    <img src="" alt="">
+                    <img src="" alt="">
+                  </div>
+                </section>
+
+                <section id="pressNews">
+                  <h2>Press and News</h2>
+                  <div class="article-preview">
+                    <p class="title">
+                      Cannabis Wheaton to Acquire Robinson's
+                    </p>
+                    <p class="date">
+                      <span id="tag">Press Release</span>, 04.04.2018
+                    </p>
+                    <p class="preview">
+                      Located in Kentville, Nova Scotia, Robinson’s is a privately-owned, late-stage licensed producer applicant under the Access to Cannabis for Medical Purposes Regulations (the “ACMPR”) and is currently constructing a 27,700 square foot purpose-built cannabis cultivation facility. Read More
+                    </p>
+                  </div>
+                </section>
+
+          </main>
+
+
+          <footer id="footer" role="contentinfo">
+                <div id="thistle">
+                  <img src="" alt="">
+                  <small>
+                    Robinsons Annapolis Valley Cirsium
+                  </small>
+                </div>
+                <div id="lighthouse">
+                  <img src="" alt="">
+                  <small>
+                    Robinsons Annapolis Valley Brier Island
+                  </small>
+                </div>
+
+                <ul>
+                  <li>
+                    <span>Address</span>
+                    <a href="https://www.google.com/maps/place/Rockwell+Dr,+Kentville,+NS+B4N+3V7/@45.061756,-64.6155493,12z/data=!4m5!3m4!1s0x4b5850bfda789717:0xbfc5ecad0d3354ac!8m2!3d45.0618559!4d-64.5455166" target="_blank">
+                      61 Rockwell Drive, Kentville, Nova Scotia , B4N 3V7
+                    </a>
+                  </li>
+                  <li>
+                    <span>Email</span>
+                    <a href="mailto:info@robinsonscannabis.com">info@robinsonscannabis.com</a>
+                  </li>
+                  <li>
+                    <span>Telephone</span>
+                    <a href="tel:+19029861864">1 (902) 986 1864</a>
+                  </li>
+                  <li>
+                    <span>Photography</span>
+                    <a href="https://www.jimrycephoto.com/" target="_blank">Jim Ryce</a>
+                  </li>
+                  <li>
+                    <span>Copyright</span>
+                    Robinsons Cannabis M.M.X.V.I.I.
+                  </li>
+                </ul>
+          </footer>
+
+    </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="js/main-min.js"></script>
