add: fonts square styles to homepage type

--- a/index.html
+++ b/index.html
@@ -11,33 +11,33 @@
     <div id="wrapper">
 
           <header>
-            <nav id="nav" role="navigation" aria-labelledby="Main Navigation" aria-label="Main Navigation">
+            <nav id="nav" class="inner-width" role="navigation" aria-labelledby="Main Navigation" aria-label="Main Navigation">
               <ul id="navlist" role="menubar">
-                <li role="menuitem">
+                <li role="menuitem" class="internal-links">
                   <a href="">Team </a>
                 </li>
-                <li role="menuitem">
+                <li role="menuitem" class="internal-links">
                   <a href="">Careers</a>
                 </li>
-                <li role="menuitem">
+                <li role="menuitem" class="internal-links">
                   <a href="">Shop</a>
                 </li>
-                <li role="menuitem">
+                <li role="menuitem" class="internal-links">
                   <a href="">About</a>
                 </li>
-                <li role="menuitem">
+                <li role="menuitem" class="internal-links">
                   <a href="">Newsletter</a>
                 </li>
-                <li role="menuitem">
+                <li role="menuitem" id="home-button">
                   <a href="index.html" aria-current="page">Robinsons Cannabis</a>
                 </li>
-                <li role="menuitem">
+                <li role="menuitem" class="social-links">
                   <a href="https://www.instagram.com/robinsonscannabis/" target="_blank">Instagram</a>
                 </li>
-                <li role="menuitem">
+                <li role="menuitem" class="social-links">
                   <a href="https://twitter.com/robinsonscanna?lang=en" target="_blank">Twitter</a>
                 </li>
-                <li role="menuitem">
+                <li role="menuitem" class="social-links">
                   <a href="https://www.instagram.com/robinsonscannabis/" target="_blank">Facebook</a>
                 </li>
               </ul>
@@ -47,15 +47,17 @@
 
           <main id="main" role="main">
 
-                <section id="logo">
+                <section id="logo" class="row center">
                   <h1>Robinsons</h1>
                 </section>
 
-                <section id="tagline">
+                <section id="tagline" class="row center blockquote">
                     <h2>Established M . M . X .V. I . I . I . </h2>
                     <h3>
                       Robinsons is Canada’s premier producer of fine crafted cannabis.
+                      <br>
                       Hand-tended and cultivated in the heart of Annapolis Valley, Nova Scotia, a coastal region
+                      <br>
                       rich with agrarian heritage. Enjoyed by discerning consumers everywhere.
                     </h3>
                 </section>
@@ -68,7 +70,7 @@
                   </div>
                 </section>
 
-                <section id="about">
+                <section id="about" class="row center square">
                     <h2>Our Story</h2>
                     <h3>
                       It begins with a plant: Cannabis sativa /Cannabis indica. This beautiful, complex plant inspired Founder and Master Grower Andrew Robinson to pursue a formal education in Plant Sciences and Technology at Dalhousie University and Nova Scotia Agricultural College, respectively. Both a passionate connoisseur as well as an intrepid visionary, Andrew brings over XX years’ experience to his craft, his namesake product now a measure of both quality and esteem. Upon assembling an expert team of growers, cultivators, XX, and XY, Robinsons Cannabis was established in XXXX. As our operations continue to grow, our focus remains resolute: produce an unparalleled, premium product, one which will both elevate and enhance Canadians’ unique personal cannabis experience.
@@ -103,7 +105,7 @@
                   <img src="" alt="">
                 </section>
 
-                <section id="region">
+                <section id="region" class="row center square">
                     <h2>The Region</h2>
                     <h3>
                       Located at the base of two vast mountain ranges adjacent to the Atlantic Ocean, the sun-kissed Annapolis Valley experiences a mild
