wip: footer add: placeholder images

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                   <h1>Robinsons</h1>
                 </section>
 
-                <section id="tagline" class="row center blockquote">
+                <section id="tagline" class="row center blockquote inner-width">
                     <h2>Established M . M . X .V. I . I . I . </h2>
                     <h3>
                       Robinsons is Canada’s premier producer of fine crafted cannabis.
@@ -63,49 +63,99 @@
                 </section>
 
                 <section id="imgs1">
-                  <img src="" alt="">
-                  <div>
-                    <img src="" alt="">
-                    <img src="" alt="">
+                  <img src="images/grass-mountain.jpg" alt="">
+                  <div class="row">
+                    <div class="column">
+                      <img src="images/lighthouse.jpg" alt="">
+                    </div>
+                    <div class="column img-padding">
+                      <img src="images/man-in-bush.jpg" alt="">
+                    </div>
                   </div>
                 </section>
 
-                <section id="about" class="row center square">
+                <section id="about" class="row center">
+                  <div class="inner-width square">
                     <h2>Our Story</h2>
                     <h3>
                       It begins with a plant: Cannabis sativa /Cannabis indica. This beautiful, complex plant inspired Founder and Master Grower Andrew Robinson to pursue a formal education in Plant Sciences and Technology at Dalhousie University and Nova Scotia Agricultural College, respectively. Both a passionate connoisseur as well as an intrepid visionary, Andrew brings over XX years’ experience to his craft, his namesake product now a measure of both quality and esteem. Upon assembling an expert team of growers, cultivators, XX, and XY, Robinsons Cannabis was established in XXXX. As our operations continue to grow, our focus remains resolute: produce an unparalleled, premium product, one which will both elevate and enhance Canadians’ unique personal cannabis experience.
                     </h3>
+                  </div>
                 </section>
 
-                <section id="products">
+                <section id="products" class="product-grid inner-width">
                   <h2>Products</h2>
-                  <div class="product">
-                    <img src="" alt="">
-                    <p>Fire O.G. Kush</p>
-                    <p>
-                      Morbi aliquam ut erat nec congue. Praesent id eleifend tellus. Morbi commodo, metus at facilisis porta, leo arcu gravida lacus, sede aliquam massa nunc nec arcu.
-                    </p>
-                    <small>
-                      70% (Sativa)
-                    </small>
-                    <small>
-                      $30/GRAM
-                    </small>
+                  <div class="row">
+                    <div class="product column _25">
+                      <img src="images/black-glass-jar.jpeg" alt="">
+                      <p class="title">Fire O.G. Kush</p>
+                      <p class="description">
+                        Morbi aliquam ut erat nec congue. Praesent id eleifend tellus. Morbi commodo, metus at facilisis porta, leo arcu gravida lacus, sede aliquam massa nunc nec arcu.
+                      </p>
+                      <p class="small">
+                          70% (Sativa)
+                      </p>
+                      <p class="small">
+                          $30/GRAM
+                      </p>
+                    </div>
+                    <div class="product column _25">
+                      <img src="images/black-glass-jar.jpeg" alt="">
+                      <p class="title">Fire O.G. Kush</p>
+                      <p class="description">
+                        Morbi aliquam ut erat nec congue. Praesent id eleifend tellus. Morbi commodo, metus at facilisis porta, leo arcu gravida lacus, sede aliquam massa nunc nec arcu.
+                      </p>
+                      <p class="small">
+                          70% (Sativa)
+                      </p>
+                      <p class="small">
+                          $30/GRAM
+                      </p>
+                    </div>
+                    <div class="product column _25">
+                      <img src="images/black-glass-jar.jpeg" alt="">
+                      <p class="title">Fire O.G. Kush</p>
+                      <p class="description">
+                        Morbi aliquam ut erat nec congue. Praesent id eleifend tellus. Morbi commodo, metus at facilisis porta, leo arcu gravida lacus, sede aliquam massa nunc nec arcu.
+                      </p>
+                      <p class="small">
+                          70% (Sativa)
+                      </p>
+                      <p class="small">
+                          $30/GRAM
+                      </p>
+                    </div>
+                    <div class="product column _25">
+                      <img src="images/black-glass-jar.jpeg" alt="">
+                      <p class="title">Fire O.G. Kush</p>
+                      <p class="description">
+                        Morbi aliquam ut erat nec congue. Praesent id eleifend tellus. Morbi commodo, metus at facilisis porta, leo arcu gravida lacus, sede aliquam massa nunc nec arcu.
+                      </p>
+                      <p class="small">
+                          70% (Sativa)
+                      </p>
+                      <p class="small">
+                          $30/GRAM
+                      </p>
+                    </div>
                   </div>
                 </section>
 
                 <section id="newsletterSignUp">
-                  <p>Receive updates about news and prodcuts direct to your inbox.</p>
-                  <p>
-                    Subscribe to our Newsletter <a href="">here</a>.
-                  </p>
+                  <div class="inner-width">
+                    <p>Receive updates about news and prodcuts direct to your inbox.</p>
+                    <p class="italic">
+                      Subscribe to our Newsletter <a href="">here</a>.
+                    </p>
+                  </div>
                 </section>
 
                 <section id="imgAlone">
-                  <img src="" alt="">
+                  <img src="images/black-bags.jpg" alt="">
                 </section>
 
-                <section id="region" class="row center square">
+                <section id="region" class="row center">
+                  <div class="inner-width square">
                     <h2>The Region</h2>
                     <h3>
                       Located at the base of two vast mountain ranges adjacent to the Atlantic Ocean, the sun-kissed Annapolis Valley experiences a mild
@@ -118,29 +168,69 @@
                       the country’s most robust wine-producing regions. We’re proud
                       to call it home.
                     </h3>
+                  </div>
                 </section>
 
                 <section id="imgs2">
-                  <img src="" alt="">
-                  <div>
-                    <img src="" alt="">
-                    <img src="" alt="">
+                  <div class="row">
+                    <div class="column img-padding">
+                      <img src="images/barn.jpg" alt="">
+                    </div>
+                    <div class="column">
+                      <img src="images/jay.jpg" alt="">
+                    </div>
                   </div>
+                  <img src="images/river.jpg" alt="">
                 </section>
 
-                <section id="pressNews">
-                  <h2>Press and News</h2>
-                  <div class="article-preview">
-                    <p class="title">
-                      Cannabis Wheaton to Acquire Robinson's
-                    </p>
-                    <p class="date">
-                      <span id="tag">Press Release</span>, 04.04.2018
-                    </p>
-                    <p class="preview">
-                      Located in Kentville, Nova Scotia, Robinson’s is a privately-owned, late-stage licensed producer applicant under the Access to Cannabis for Medical Purposes Regulations (the “ACMPR”) and is currently constructing a 27,700 square foot purpose-built cannabis cultivation facility. Read More
-                    </p>
-                  </div>
+                <section id="pressNews" class="blog-grid">
+                    <h2>Press and News</h2>
+                    <div class="row inner-width">
+                      <div class="article-preview column _25">
+                        <p class="title">
+                          Cannabis Wheaton to Acquire Robinson's
+                        </p>
+                        <p class="date">
+                          <span class="italic">Press Release</span>, 04.04.2018
+                        </p>
+                        <p class="preview">
+                          Located in Kentville, Nova Scotia, Robinson’s is a privately-owned, late-stage licensed producer applicant under the Access to Cannabis for Medical Purposes Regulations (the “ACMPR”) and is currently constructing a 27,700 square foot purpose-built cannabis cultivation facility. Read More
+                        </p>
+                      </div>
+                      <div class="article-preview column _25">
+                        <p class="title">
+                          Cannabis Wheaton to Acquire Robinson's
+                        </p>
+                        <p class="date">
+                          <span class="italic">Press Release</span>, 04.04.2018
+                        </p>
+                        <p class="preview">
+                          Located in Kentville, Nova Scotia, Robinson’s is a privately-owned, late-stage licensed producer applicant under the Access to Cannabis for Medical Purposes Regulations (the “ACMPR”) and is currently constructing a 27,700 square foot purpose-built cannabis cultivation facility. Read More
+                        </p>
+                      </div>
+                      <div class="article-preview column _25">
+                        <p class="title">
+                          Cannabis Wheaton to Acquire Robinson's
+                        </p>
+                        <p class="date">
+                          <span class="italic">Press Release</span>, 04.04.2018
+                        </p>
+                        <p class="preview">
+                          Located in Kentville, Nova Scotia, Robinson’s is a privately-owned, late-stage licensed producer applicant under the Access to Cannabis for Medical Purposes Regulations (the “ACMPR”) and is currently constructing a 27,700 square foot purpose-built cannabis cultivation facility. Read More
+                        </p>
+                      </div>
+                      <div class="article-preview column _25">
+                        <p class="title">
+                          Cannabis Wheaton to Acquire Robinson's
+                        </p>
+                        <p class="date">
+                          <span class="italic">Press Release</span>, 04.04.2018
+                        </p>
+                        <p class="preview">
+                          Located in Kentville, Nova Scotia, Robinson’s is a privately-owned, late-stage licensed producer applicant under the Access to Cannabis for Medical Purposes Regulations (the “ACMPR”) and is currently constructing a 27,700 square foot purpose-built cannabis cultivation facility. Read More
+                        </p>
+                      </div>
+                    </div>
                 </section>
 
           </main>
