update: footer desktop styles complete

--- a/index.html
+++ b/index.html
@@ -237,48 +237,58 @@
 
 
           <footer id="footer" role="contentinfo">
-                <div id="thistle">
-                  <img src="" alt="">
-                  <small>
-                    Robinsons Annapolis Valley Cirsium
-                  </small>
-                </div>
-                <div id="lighthouse">
-                  <img src="" alt="">
-                  <small>
-                    Robinsons Annapolis Valley Brier Island
-                  </small>
+                <div id="logos" class="row center">
+                      <div id="thistle" class="column">
+                        <img src="images/SVG/thistle-logo.svg" alt="">
+                        <p class="small">
+                          Robinsons Annapolis Valley Cirsium
+                        </p>
+                      </div>
+                      <div id="lighthouse" class="column">
+                        <img src="images/SVG/lighthouse-logo.svg" alt="">
+                        <p class="small">
+                            Robinsons Annapolis Valley Brier Island
+                        </p>
+                      </div>
                 </div>
 
-                <ul>
-                  <li>
-                    <span>Address</span>
-                    <a href="https://www.google.com/maps/place/Rockwell+Dr,+Kentville,+NS+B4N+3V7/@45.061756,-64.6155493,12z/data=!4m5!3m4!1s0x4b5850bfda789717:0xbfc5ecad0d3354ac!8m2!3d45.0618559!4d-64.5455166" target="_blank">
-                      61 Rockwell Drive, Kentville, Nova Scotia , B4N 3V7
-                    </a>
-                  </li>
-                  <li>
-                    <span>Email</span>
-                    <a href="mailto:info@robinsonscannabis.com">info@robinsonscannabis.com</a>
-                  </li>
-                  <li>
-                    <span>Telephone</span>
-                    <a href="tel:+19029861864">1 (902) 986 1864</a>
-                  </li>
-                  <li>
-                    <span>Photography</span>
-                    <a href="https://www.jimrycephoto.com/" target="_blank">Jim Ryce</a>
-                  </li>
-                  <li>
-                    <span>Copyright</span>
-                    Robinsons Cannabis M.M.X.V.I.I.
-                  </li>
-                </ul>
+                <div id="contentinfo" class="inner-width">
+                      <ul id="contact" class="row">
+                        <li class="column">
+                          <span>Address</span>
+                          <a href="https://www.google.com/maps/place/Rockwell+Dr,+Kentville,+NS+B4N+3V7/@45.061756,-64.6155493,12z/data=!4m5!3m4!1s0x4b5850bfda789717:0xbfc5ecad0d3354ac!8m2!3d45.0618559!4d-64.5455166" target="_blank">
+                            61 Rockwell Drive, Kentville, Nova Scotia , B4N 3V7
+                          </a>
+                        </li>
+                        <li class="column">
+                          <span>Email</span>
+                          <a href="mailto:info@robinsonscannabis.com">info@robinsonscannabis.com</a>
+                        </li>
+                        <li class="column">
+                          <span>Telephone</span>
+                          <a href="tel:+19029861864">1 (902) 986 1864</a>
+                        </li>
+                      </ul>
+                      <ul id="copyright" class="row">
+                        <li class="column">
+                          <span>Photography</span>
+                          <a href="https://www.jimrycephoto.com/" target="_blank">Jim Ryce</a>
+                        </li>
+                        <li class="column">
+                          <span>Video</span>
+                          <a href="#" target="_blank">Eddy El-Diri</a>
+                        </li>
+                        <li class="column">
+                          <span>Copyright</span>
+                          Robinsons Cannabis M.M.X.V.I.I.
+                        </li>
+                      </ul>
+                </div>
           </footer>
 
     </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="js/main-min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
