add: careers page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                   <a href="">Team </a>
                 </li>
                 <li role="menuitem" class="internal-links">
-                  <a href="">Careers</a>
+                  <a href="careers.html">Careers</a>
                 </li>
                 <li role="menuitem" class="internal-links">
                   <a href="">Shop</a>
@@ -45,7 +45,7 @@
           </header>
 
 
-          <main id="main" role="main">
+          <main id="main" class="home" role="main">
 
                 <section id="logo" class="row center">
                   <h1>Robinsons</h1>
