--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                   <a href="">Newsletter</a>
                 </li>
                 <li role="menuitem" id="home-button">
-                  <a href="index.html" aria-current="page">Robinsons Cannabis</a>
+                  <a href="index.html">Robinsons Cannabis</a>
                 </li>
                 <li role="menuitem" class="social-links">
                   <a href="https://www.instagram.com/robinsonscannabis/" target="_blank">Instagram</a>
@@ -63,13 +63,13 @@
                 </section>
 
                 <section id="imgs1">
-                  <img src="images/grass-mountain.jpg" alt="">
+                  <img src="images/cropped/Robinsons_Image_1.jpg" alt="">
                   <div class="row">
                     <div class="column">
-                      <img src="images/lighthouse.jpg" alt="">
+                      <img src="images/cropped/Robinsons_Image_2.jpg" alt="">
                     </div>
-                    <div class="column img-padding">
-                      <img src="images/man-in-bush.jpg" alt="">
+                    <div class="column">
+                      <img src="images/cropped/Robinsons_Image_3b.jpg" alt="">
                     </div>
                   </div>
                 </section>
@@ -149,10 +149,10 @@
                     </p>
                   </div>
                 </section>
-
+<!-- 
                 <section id="imgAlone">
                   <img src="images/black-bags.jpg" alt="">
-                </section>
+                </section> -->
 
                 <section id="region" class="row center">
                   <div class="inner-width square">
@@ -173,14 +173,14 @@
 
                 <section id="imgs2">
                   <div class="row">
-                    <div class="column img-padding">
-                      <img src="images/barn.jpg" alt="">
+                    <div class="column">
+                      <img src="images/cropped/Robinsons_Image_4b.jpg" alt="">
                     </div>
                     <div class="column">
-                      <img src="images/jay.jpg" alt="">
+                      <img src="images/cropped/Robinsons_Image_5.jpg" alt="">
                     </div>
                   </div>
-                  <img src="images/river.jpg" alt="">
+                  <img src="images/cropped/Robinsons_Image_6.jpg" alt="">
                 </section>
 
                 <section id="pressNews" class="blog-grid">
