--- a/careers.html
+++ b/careers.html
@@ -29,7 +29,7 @@
                   <a href="">Newsletter</a>
                 </li>
                 <li role="menuitem" id="home-button">
-                  <a href="index.html" aria-current="page">Robinsons Cannabis</a>
+                  <a href="index.html">Robinsons Cannabis</a>
                 </li>
                 <li role="menuitem" class="social-links">
                   <a href="https://www.instagram.com/robinsonscannabis/" target="_blank">Instagram</a>
@@ -47,16 +47,20 @@
 
           <main id="main" class="careers" role="main">
 
-              <section id="" class="">
-                <h1>
-                  Careers
-                </h1>
-                <h3>
-                  Help craft the next chapter of Robinsons Cannabis. We’re always looking
-                  for talented, passionate individuals to join our team. If no current
-                  openings match your qualifications or interest, please email us your cover
-                  letter and resume and let us know why you would make a great fit.
-                </h3>
+              <section id="intro" class="">
+                <div class="row center inner-width">
+                  <div class="column">
+                    <h1>
+                      Careers
+                    </h1>
+                    <h3>
+                      Help craft the next chapter of Robinsons Cannabis. We’re always looking
+                      for talented, passionate individuals to join our team. If no current
+                      openings match your qualifications or interest, please email us your cover
+                      letter and resume and let us know why you would make a great fit.
+                    </h3>
+                  </div>
+                </div>
               </section>
 
           </main>
